# super-train

./: CMakeLists.txt  README.md  flake.nix
src/: super-train.cpp
